Add TIC property details
